--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -23,7 +23,7 @@ var projects = [
       description: "They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.",
       image: {
         styles: '--min-parent-height: 175px; --max-height: calc(100% + 50px); --translate-y: -5px',
-        src: 'treasurechest-foundation.svg',
+        src: 'treasurechest-foundation.png',
         alt: 'The Treasure Chest Foundation Image'
       }
     },
@@ -43,7 +43,7 @@ var projects = [
       description: "We are currently working with Anita from Vanni Aid to re-do their website! Adarsh is working on this.",
       image: {
         styles: '',
-        src: 'vanniaid-foundation.svg',
+        src: 'vanniaid-foundation.jpg',
         alt: 'The Vanni Aid Image'
       }
     },
@@ -54,7 +54,7 @@ var projects = [
       description: 'Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program.',
       image: {
         styles: '',
-        src: 'cora-foundation.svg',
+        src: 'cora-foundation.png',
         alt: 'The CORA Logo'
       }
     },
