--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -14,6 +14,7 @@ export function getStaticPaths() {
         {params: {username: 'beatriz'}}, 
         {params: {username: 'bridget'}}, 
         {params: {username: 'cedrus'}}, 
+        {params: {username: 'david'}}, 
         {params: {username: 'hanlin'}}, 
         {params: {username: 'isabelle'}}, 
         {params: {username: 'jeremy'}}, 
