--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -26,7 +26,6 @@ export function getStaticPaths() {
         {params: {username: 'maya'}}, 
         {params: {username: 'parker'}}, 
         {params: {username: 'robin'}}, 
-        {params: {username: 'samantha'}}, 
         {params: {username: 'sayuri'}}, 
         {params: {username: 'shikha'}}, 
         {params: {username: 'tyler'}}, 
@@ -36,6 +35,7 @@ export function getStaticPaths() {
         {params: {username: 'juhi'}}, 
         {params: {username: 'rien'}}, 
         {params: {username: 'sam'}}, 
+        // {params: {username: 'samantha'}}, 
     ];
 }
 
