--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -35,7 +35,7 @@ export function getStaticPaths() {
         {params: {username: 'juhi'}}, 
         {params: {username: 'rien'}}, 
         {params: {username: 'sam'}}, 
-        // {params: {username: 'samantha'}}, 
+        {params: {username: 'samantha'}}, 
     ];
 }
 
