--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,6 +7,17 @@ import Carousel from '../components/carousel.astro'
 import '../styles/pages/projects.scss'
 import '../styles/photos.scss'
 
+// {
+//   title: 'Treasure Chest Foundation',
+//   description: "They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.",
+//   image: {
+//     styles: '--min-parent-height: 175px; --max-height: calc(100% + 50px); --translate-y: -5px',
+//     src: 'treasurechest-foundation.png',
+//     alt: 'The Treasure Chest Foundation Image'
+//   }
+// },
+
+
 var projects = [
   [
     {
@@ -19,17 +30,6 @@ var projects = [
       }
     },
     {
-      title: 'Treasure Chest Foundation',
-      description: "They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.",
-      image: {
-        styles: '--min-parent-height: 175px; --max-height: calc(100% + 50px); --translate-y: -5px',
-        src: 'treasurechest-foundation.png',
-        alt: 'The Treasure Chest Foundation Image'
-      }
-    },
-  ],
-  [
-    {
       title: 'S.A.V.E. Foundation',
       description: 'Chao from S.A.V.E. wants us to create Instagram posts for #herstory. This is where S.A.V.E posts inspiring stories of strong and brave women.',
       image: {
@@ -38,6 +38,8 @@ var projects = [
         alt: 'The S.A.V.E. Foundation Logo'
       }
     },
+  ],
+  [
     {
       title: 'Vanni Aid',
       description: "We are currently working with Anita from Vanni Aid to re-do their website! Adarsh is working on this.",
@@ -47,8 +49,6 @@ var projects = [
         alt: 'The Vanni Aid Image'
       }
     },
-  ],
-  [
     {
       title: 'CORA',
       description: 'Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program.',
