create headstreams project

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -59,6 +59,17 @@ var projects = [
       }
     },
   ],
+  [
+  {
+      title: 'headstreams',
+      description: 'Description Coming Soon',
+      image: {
+        styles: '',
+        src: 'headstreams.png',
+        alt: 'The headstreams Logo'
+      }
+    },
+  ]
 ]
 
 ---
