--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,13 +4,13 @@ $split-animation-value: 25px;
 
 // site
 $orig-bg-color: #1a4276;
-$bg-color: var(--orig-bg-color) ;
+$bg-color: $orig-bg-color;
 
 $scroll-bar-width: 10px;
 
 $shadow-color: black;
 $shadow-size: 10px;
-$main-shadow: var(--shadow-color, var(--orig-bg-color)) 0 0 var(--shadow-size);
+$main-shadow: $shadow-color 0 0 $shadow-size;
 
 $tiny-split-image-parent-min-height: 0px;
 
