--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,7 +16,7 @@
   background-color: var(--orig-bg-color);
   color: white;
 
-  font-family: var(--font, 'Dekko', sans-serif);
+  font-family: var(--font);
 }
 
 // Custom Scrollbar
