--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -67,7 +67,7 @@ import '../styles/photos.scss'
             </ul>
         </Hero>
     </main>
-    <script>
+    <script is:inline>
         var locationSearch = location.search
         var searchParams = new URLSearchParams(searchParams)
         var m = params.get('m')
