--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -69,7 +69,7 @@ import '../styles/photos.scss'
     </main>
     <script is:inline>
         if (location.href.includes('?m=')) {
-            // location.href = location.pathname
+            location.href = location.pathname
         }
     </script>
     <script is:inline src="/members.js"></script>
