--- a/src/components/carousels/clubCarousel.astro
+++ b/src/components/carousels/clubCarousel.astro
@@ -3,28 +3,33 @@ import Carousel from '../carousel.astro'
 
 var images = await Astro.glob('../../../public/assets/club_photos/previews/*')
 
+function getFName(str) {
+    if (str.includes('/')) str = str.split('/').slice(-1)[0]
+    return str
+}
+
 const { carouselIndex } = Astro.props
 ---
 <Carousel carouselIndex={carouselIndex}>
-    <pre>{JSON.stringify(images, null, 4)}</pre>
-    <!-- {
+    {
         images.map((img, i) => {
+            img = img.default
             switch (i) {
                 case 0: 
-                    return <img class="left" src="/assets/club_photos/previews/IMG_0512.jpg" draggable="false" />
+                    return <img class="left" src={`/assets/club_photos/previews/${getFName(img.src)}`} draggable="false" />
                     break
                 case 1: 
-                    return <img class="active" src="/assets/club_photos/previews/IMG_0512.jpg" draggable="false" />
+                    return <img class="active" src={`/assets/club_photos/previews/${getFName(img.src)}`} draggable="false" />
                     break
                 case 2: 
-                    return <img class="right" src="/assets/club_photos/previews/IMG_0512.jpg" draggable="false" />
+                    return <img class="right" src={`/assets/club_photos/previews/${getFName(img.src)}`} draggable="false" />
                     break
                 default: 
-                    return <img src="/assets/club_photos/previews/IMG_0512.jpg" draggable="false" />
+                    return <img src={`/assets/club_photos/previews/${getFName(img.src)}`} draggable="false" />
                     break
             }
         })
-    } -->
+    }
     <!-- <img class="left" src="/assets/club_photos/previews/IMG_0506.jpg" draggable="false">
     <img class="active" src="/assets/club_photos/previews/IMG_0496.jpg" draggable="false">
     <img class="right" src="/assets/club_photos/previews/IMG_0498.jpg" draggable="false">
