--- a/src/components/carousels/clubCarousel.astro
+++ b/src/components/carousels/clubCarousel.astro
@@ -5,6 +5,11 @@ var images = await Astro.glob('../../../public/assets/club_photos/previews/*')
 
 function getFName(str) {
     if (str.includes('/')) str = str.split('/').slice(-1)[0]
+
+    if (str.includes('.')) {
+        str.split('.')
+        `${str.slice(0, -2)[0]}.${str.slice(-1)[0]}`
+    }
     return str
 }
 
