--- a/src/components/carousels/clubCarousel.astro
+++ b/src/components/carousels/clubCarousel.astro
@@ -7,8 +7,9 @@ function getFName(str) {
     if (str.includes('/')) str = str.split('/').slice(-1)[0]
 
     if (str.includes('.')) {
+        str = str.split('.')
         console.log(str)
-        str = str.split('.').splice(-2, 1).join('.')
+        // str.splice(-2, 1).join('.')
     }
     return str
 }
