--- a/src/components/carousels/clubCarousel.astro
+++ b/src/components/carousels/clubCarousel.astro
@@ -7,9 +7,8 @@ function getFName(str) {
     if (str.includes('/')) str = str.split('/').slice(-1)[0]
 
     if (str.includes('.')) {
-        str = str.split('.').splice(-2, 1)
-        console.log(str)
-        // str.join('.')
+        var rem = str.split('.').splice(-2, 1)
+        str = str.split(`.${rem}.`).join('.')
     }
     return str
 }
