--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -3,7 +3,7 @@ import Carousel from '../carousel.astro'
 
 const { carouselIndex } = Astro.props
 ---
-<Carousel carouselIndex={carouselIndex}>
+<Carousel carouselIndex={carouselIndex} dataColumns={17}>
     <img class="left" src="/assets/members/isabelle/portfolio/previews/Birds-are-essential-for-our-environment!.png" draggable="false">
     <img class="active" src="/assets/members/shikha/portfolio/previews/Did-you-know.png" draggable="false">
     <img class="right" src="/assets/members/shikha/portfolio/previews/Women's-History-Month!.png" draggable="false">
