--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -3,7 +3,7 @@ export interface Props {
 	carouselIndex: string;
 }
 
-var { carouselIndex, cols } = Astro.props as Props;
+var { carouselIndex, dataColumns } = Astro.props as Props;
 
 carouselIndex = parseInt(carouselIndex)
 
