--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -6,6 +6,8 @@ export interface Props {
 var { carouselIndex, dataColumns } = Astro.props as Props;
 
 carouselIndex = parseInt(carouselIndex)
+dataColumns = parseInt(dataColumns)
+console.log(dataColumns)
 
 var forwFunction = `javascript:goBack(${carouselIndex});`
 var backFunction = `javascript:goForw(${carouselIndex});`
