--- a/src/components/carousels/clubCarousel.astro
+++ b/src/components/carousels/clubCarousel.astro
@@ -13,6 +13,7 @@ function getFName(str) {
     return str
 }
 
+console.log(images.length)
 const { carouselIndex } = Astro.props
 ---
 <Carousel carouselIndex={carouselIndex} dataColumns={images.length}>
