--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -1,7 +1,8 @@
 .carousel {
-    .imgs {
-        flex: 1;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
 
+    .imgs {
         margin: 0;
         padding: 0;
         
