--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -8,11 +8,17 @@ var { carouselIndex, dataColumns } = Astro.props as Props;
 carouselIndex = parseInt(carouselIndex)
 dataColumns = parseInt(dataColumns).toString()
 
-var forwFunction = `javascript:goBack(${carouselIndex});`
-var backFunction = `javascript:goForw(${carouselIndex});`
+var forwFunction = `javascript:goBack(this.parentNode.parentNode);`
+var backFunction = `javascript:goForw(this.parentNode.parentNode);`
 
 console.log(dataColumns)
 ---
 <div class="carousel" data-index={carouselIndex} data-columns={dataColumns}>
+  <a href="#" onClick={backFunction}>
+    <img src="/assets/arrows/L.svg" class="button" draggable="false" alt={`Move Carousel ${carouselIndex} Backward.`} />
+  </a>
   <slot />
+  <a href="#" onClick={forwFunction}>
+    <img src="/assets/arrows/R.svg" class="button" draggable="false" alt={`Move Carousel ${carouselIndex} Forwards.`} />
+  </a>
 </div>
