--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -8,6 +8,7 @@
         padding: 25px;
         
         display: grid;
+        gap: 25px;
     
         // width: calc(var(--cols, 1)*100%);
     
