--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -15,13 +15,13 @@
         $grid: repeat(var(--cols, 1), 100%);
         grid-template-columns: $grid;
         grid-template-rows: repeat(1, 1fr);
-    
+
+        place-items: center;    
         
         overflow-x: auto;
         scroll-snap-type: x mandatory;
 
         list-style: none;
-
         isolation: isolate;
   
         & > * {
@@ -45,13 +45,19 @@
         --shadow-size: 25px;
         --shadow-color: var(--orig-bg-color);  
 
-        background-color: var(--orig-bg-color);
-
+        margin-inline: auto;
+        
         max-width: 100%;
+        max-height: 100%;
 
-        border-radius: 25px;
-
+        block-size: 100%;
+        object-fit: cover;
+        
+        
+        background-color: var(--orig-bg-color);
         box-shadow: var(--shadow-color, var(--orig-bg-color)) 0px 0px var(--shadow-size);
+        
+        border-radius: 25px;
 
         cursor: pointer;
 
