--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -40,7 +40,7 @@
         }
     }
 
-    & img {
+    & .imgs img {
         --time: 250ms;
         --shadow-size: 25px;
         --shadow-color: var(--orig-bg-color);  
