--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -14,7 +14,7 @@ var backFunction = `javascript:goForw(this.parentNode.parentNode);`
 console.log(dataColumns)
 ---
 <div class="carousel" data-index={carouselIndex} data-columns={dataColumns}>
-  <a hidden href="#" onClick={backFunction}>
+  <a href="#" onClick={backFunction}>
     <img src="/assets/arrows/L.svg" class="button" draggable="false" alt={`Move Carousel ${carouselIndex} Backward.`} />
   </a>
   <div class="img-container">
@@ -22,7 +22,7 @@ console.log(dataColumns)
       <slot />
     </div>
   </div>
-  <a hidden href="#" onClick={forwFunction}>
+  <a href="#" onClick={forwFunction}>
     <img src="/assets/arrows/R.svg" class="button" draggable="false" alt={`Move Carousel ${carouselIndex} Forwards.`} />
   </a>
 </div>
