--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -61,8 +61,8 @@
         max-width: 100%;
         max-height: 100%;
 
-        block-size: 100%;
-        object-fit: cover;
+        // block-size: 100%;
+        // object-fit: cover;
         
         
         background-color: var(--orig-bg-color);
